# quadcopter-simulation

./: quadcopter-simulation.cabal  read.py  stack.yaml
app/: Main.hs
arduino-accel-rust/: Makefile  cycles-counter-avr.py
arduino-accel-rust/src/: main.rs
